# mcp-conductor

./: .gitignore  Cargo.toml  README.md  mcpgw.example.toml
.github/workflows/: ci.yml
crates/mcp-gateway/: Cargo.toml
crates/mcp-gateway/src/: config.rs  main.rs  middleware.rs  pool.rs  proxy.rs  routes.rs
demo/: demo.sh
docs/: ARCHITECTURE.md  CONFIGURATION.md  GETTING_STARTED.md
