[workspace]
members = [
    "crates/mcp-gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP — official Rust SDK (client + server + all transports)
rmcp = { version = "1.1", features = [
    "client",
    "server",
    "macros",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "reqwest",
    "tower",
] }

# HTTP server
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# Database (state, event log)
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
schemars = "1.0"

# Process management
process-wrap = "8"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
