[package]
name = "mcp-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP gateway for MCP servers — bridge REST/webhooks to MCP tool calls"

[[bin]]
name = "mcpgw"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
rmcp = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
tokio-util = "0.7.18"
futures = "0.3.32"
